# emerging_barrier_mbd

./: README.md  pyproject.toml
diffusion_trajopt/: constraints.py  diffusion_opt.py  diffusion_utils.py  emerging_barrier.py  gaussian.py  mc_gaussian_smoothing.py  projection.py  trajopt.py  utils.py
diffusion_trajopt/environments/: obs2d_navigator.py
scripts/: 1d_barrier_diffopt.py  obs2d_generate_dataset.py  obs2d_trajopt.py  projection_based.py  reach_arm_trajopt.py  reach_projection.py
scripts/generate_figures/: graph_diffusion.py  graph_mc_issue.py  graph_mountain_plot.py  graph_mountain_video.py  obs2d_iterations.py
