[tool.poetry]
name = "diffusion_trajopt"
version = "0.1.0"
description = ""
authors = ["Raghav Mishra <raghav.mishra@sydney.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
jax = {extras = ["cuda12"], version = "^0.4.33"}
flax = ">0.9.0"
matplotlib = "^3.9.2"
mujoco = ">=3.3.3"
mujoco-mjx = ">=3.3.3"
jupyterlab = ">4.2.5"
tqdm = ">4.66.5"
cvxopt = "^1.3.2"
equinox = "^0.12.2"
seaborn = "^0.13.2"
jax-cosmo = "0.1.0"
interpax = "^0.3.9"
scienceplots = "^2.1.1"
jax-tqdm = "^0.4.0"
kitcat = "^1.2.1"
matplotloom = "^0.9.1"



[tool.poetry.group.reach]
optional = true

[tool.poetry.group.reach.dependencies]
reach-mjx = {path = "../reach-mjx"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
